--- a/dm/index-dm-1.html
+++ b/dm/index-dm-1.html
@@ -39,13 +39,25 @@
 
                         <div class="container-flexbox">
                             <div class="item-1">
-                                <h1>Welcome</h1>
+                                <h1>Resources</h1>
                                 <h2>Digital Marketing</h2> 
                             </div>
                             
                         </div><!-- End parent flexbox container -->
 
                     </section>
+
+					<section>
+                       <div class="container-flexbox">
+
+                            <div class="item-1">
+								<img src="assets/img/two-words.png">
+							</div>
+                            
+                        </div><!-- End parent flexbox container -->
+
+                    </section>
+
 
                     <section>
                         <div class="container-flexbox">
