--- a/dm/index-dm-5.html
+++ b/dm/index-dm-5.html
@@ -241,13 +241,14 @@
 
                     </section>
 
+
                    <section>
 
                         <div class="container-flexbox">
 
                             <div class="item-1">
-							<h2 style="font-size:56px;text-align: center">Purchase / Advocacy</h2>
-								<img src="assets/img/journey-awareness-10.png">
+							<h2 style="font-size:56px;text-align: center">Marketing Strategies</h2>
+								<img src="assets/img/journey-final.png">
 							</div>
                             
                         </div><!-- End parent flexbox container -->
