New digital marketing slides

--- a/dm/index.html
+++ b/dm/index.html
@@ -2,9 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>BM reveal.js</title>
+		<title>Digital Marketing Slides</title>
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
@@ -63,7 +65,7 @@
                                 <p><a href="index-dm-1.html">Resources</a></p> 
                                 <p><a href="index-dm-3.html">Marketing Channels</a></p> 
                                 <p><a href="index-dm-5.html">Buyer's Jounrey</a></p><br>
-								<p>bmunnelly@ibat.ie</p<
+								<p>bmunnelly@ibat.ie</p>
                                </div>
                             
                         </div><!-- End parent flexbox container -->
@@ -75,7 +77,7 @@
             </div>    
 		</div>
 
-		<script src="js/dm.js"></script>
+		<script src="js/dm.min.js"></script>
 
 		<script>
 			Reveal.initialize({
