--- a/dm/index-web-0.html
+++ b/dm/index-web-0.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>BM reveal.js</title>
+		<title>Website Optimisation</title>
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
@@ -76,7 +76,7 @@
             </div>    
 		</div>
 
-		<script src="js/dm.js"></script>
+		<script src="js/dm.min.js"></script>
 
 		<script>
 			Reveal.initialize({
