--- a/dm/index-web-0.html
+++ b/dm/index-web-0.html
@@ -56,7 +56,7 @@
 									<li style="margin-bottom:32px">Website Structure</li>
 									<li style="margin-bottom:32px"><a href="parts-of-a-web-page-final.ppt">Web Page Elements</a></li>
 									<li style="margin-bottom:32px"><a href="index-web-4.html">Web Page Types</a></li>
-									<li style="margin-bottom:32px"><a href="Ultimate-website-checklist-Gill-Andrews.pdf">Website Checklist</li>
+									<li style="margin-bottom:32px"><a href="Ultimate-website-checklist-Gill-Andrews.pdf">Website Checklist</a></li>
 									<li style="margin-bottom:32px">UX, UI and Accessibility</li>
 								</ul>
                             </div>
