--- a/dm/index-web-4.html
+++ b/dm/index-web-4.html
@@ -87,7 +87,7 @@
 
                             <div class="item-2" style="align-self:flex-end">
 								<img src="assets/img/webopt/web-page-types.png" style="margin: 0 0 0 160px; width:350px; height: auto">
-								<p style="font-size:17px; text-align: right; margin:-32px 12px 0 0; padding:0">IMAGE: <a style="font-size:18px" href="https://careerfoundry.com/en/portfolios/katherine-lus-portfolio/" target="_blank">Katherine Lu&#8217;s portfolio</a></p>
+								<p style="font-size:17px; text-align: right; margin:-32px 12px 0 0; padding:0">IMAGE: <a style="font-size:18px" href="https://careerfoundry.com/en/portfolios/katherine-lus-portfolio/" target="_blank">Portfolio of Katherine Lu</a></p>
                             </div>
                             
                             <div class="item-2">
