--- a/dm/index-web-4.html
+++ b/dm/index-web-4.html
@@ -92,7 +92,7 @@
                             
                             <div class="item-2">
                                <h1 style="font-size:52px;line-height: 1.3">Types of <br>Web Pages</h1>
-							   <p>All web pages are not the same.</p>
+							   <p>All web pages are not the same:</p>
 							   <ul style="list-style-type:none; margin-left:0">
 									<li style="margin-bottom:22px;font-size: 28px"><span class="page-number">1</span><a href="index-web-4.html#/1">Home Pages</a></li>
 									<li style="margin-bottom:22px;font-size: 28px"><span class="page-number">2</span><a href="index-web-4.html#/4">Product/Service Pages</a></li>
@@ -525,6 +525,16 @@
                             </div>
                         </div><!-- End parent flexbox container -->
                     </section>
+
+                   <section>
+						<div class="container-flexbox" style="padding-top:0;margin-top:32px">
+                            <div class="item-1" style="align-self:flex-end">
+							<h3><a href="index-web-4.html"><< Back to Home</a></h3>
+							</div>
+                        </div><!-- End parent flexbox container -->
+                    </section>
+
+
 
                     
                 </div>
