--- a/dm/index-web-0.html
+++ b/dm/index-web-0.html
@@ -56,14 +56,14 @@
 									<li style="margin-bottom:32px"><a href="index-web-1.html">Overview</a></li>
 									<li style="margin-bottom:32px"><a href="index-web-3.html">Web Page Elements</a></li>
 									<li style="margin-bottom:32px"><a href="index-web-4.html">Types of Web Pages</a></li>
-									<li style="margin-bottom:32px"><a href="Ultimate-website-checklist-Gill-Andrews.pdf">Website Checklist</a></li>
+									<li style="margin-bottom:32px"><a href="Ultimate-website-checklist-Gill-Andrews.pdf" target="_blank">Website Checklist</a></li>
 									<!--<li style="margin-bottom:32px">UX, UI and Accessibility</li>-->
 								</ul>
                             </div>
                             
                             <div class="item-2" style="align-self:flex-end">
                                 <ul>
-									<li style="margin-bottom:32px"><a href="https://digitalmarketinginstitute.com/exam-preparation-resources/practice-exam-questions/certified-digital-marketing-professional-v8">Practice quiz</a></li>
+									<li style="margin-bottom:32px"><a href="https://digitalmarketinginstitute.com/exam-preparation-resources/practice-exam-questions/certified-digital-marketing-professional-v8" target="_blank">Practice quiz</a></li>
 									<!-- <li style="margin-bottom:32px">Web Hosting Providers</li>
 									<li style="margin-bottom:32px">WordPress CMS</li> -->
 								</ul>
