--- a/dm/index-web-3.html
+++ b/dm/index-web-3.html
@@ -125,7 +125,7 @@
 								<h2 style="margin-bottom:32px"><span class="page-number">1</span>Hero Block</h2>
 								<img src="assets/img/webopt/elements/attention.png">
 								<H4>"Thus, visual appeal can be assessed within 50 ms, suggesting that web designers have about 50 ms to make a good first impression."</H4>
-								<a href="https://www.researchgate.net/publication/220208334_Attention_web_designers_You_have_50_milliseconds_to_make_a_good_first_impression_Behaviour_and_Information_Technology_252_115-126" target="_blank">ReearchGate&nbsp;&nbsp;<i class="fas fa-external-link-alt"></i></a>
+								<a href="https://www.researchgate.net/publication/220208334_Attention_web_designers_You_have_50_milliseconds_to_make_a_good_first_impression_Behaviour_and_Information_Technology_252_115-126" target="_blank">ResearchGate&nbsp;&nbsp;<i class="fas fa-external-link-alt"></i></a>
 							</div>
                         </div><!-- End parent flexbox container -->
                     </section>
