--- a/dm/index-dm-1.html
+++ b/dm/index-dm-1.html
@@ -39,7 +39,7 @@
 
                         <div class="container-flexbox">
                             <div class="item-1">
-                                <h1>Resources</h1>
+                                <h1 style="font-size:82px">Digital Marketing <br>is Two Words</h1>
                                <h2 style="color:#000;font-family:Roboto, sans-serif">Digital Marketing</h2> 
                             </div>
                             
@@ -284,6 +284,16 @@
 
                     </section>
 
+                    <section>
+
+                        <div class="container-flexbox">
+
+                            <div class="item-1">
+                                <img src="assets/img/gill-book.png" >
+                            </div>
+                        </div><!-- End parent flexbox container -->
+
+                    </section>
  
                 </div>
             </div>    
