--- a/dm/index.html
+++ b/dm/index.html
@@ -43,14 +43,16 @@
                             <div class="item-2">
                                 <h2>Introduction to Digital Marketing</h2>
                                 <p><a href="index-dm-0.html">Overview</a></p> 
-                                <p><a href="index-dm-1.html">Resources</a></p> 
+                                <p><a href="index-dm-1.html">Digital Marketing is Two Words</a></p> 
                                 <p><a href="index-dm-3.html">Marketing Channels</a></p> 
                                 <p><a href="index-dm-5.html">Buyer&#8217;s Jounrey</a></p><br>
+
+                                <p><a href="dm-hndout-bm.pdf">Handouts</a></p><br>
 
                             </div>
                             
                             <div class="item-2">
-                                <h2>Website Optimisation</h2>
+                                <h2>Website <br>Optimisation</h2>
                                 <p><a href="index-web-0.html">Overview</a></p> 
 							</div>
                         </div><!-- End parent flexbox container -->
