--- a/dm/index.html
+++ b/dm/index.html
@@ -47,7 +47,7 @@
                                 <p><a href="index-dm-3.html">Marketing Channels</a></p> 
                                 <p><a href="index-dm-5.html">Buyer&#8217;s Jounrey</a></p><br>
 
-                                <p><a href="dm-hndout-bm.pdf">Handouts</a></p><br>
+                                <p><a href="dm-handout-bm.pdf">Handouts</a></p><br>
 
                             </div>
                             
