Web browsers text

--- a/it4women/exercises/working-with-web-browsers.html
+++ b/it4women/exercises/working-with-web-browsers.html
@@ -196,10 +196,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>DevTools are being continually updated with new features, as makers of web browsers compete to offer web developers and designers the most useful and convenient features.</li>
 	</ul>
 
-	<p>In web browsers, there are three ways to display DevTools: the <b>F12</b> key, the <b>Inspect Element</b> command, and via an icon at the top-right of the web browser window.</p>
-
-	<h3>DevTools: the F12 key</h3>
-	<p>The quickest, simplest way to display DevTools in any web browser is to press the <b>F12</b> key. Pressing the same key a second time will hide the DevTools window.</p>
+	<p>In web browsers, there are two main ways to display DevTools: the <b>Inspect Element</b> command, and via an icon at the top-right of the web browser window.</p>
 
 	<h3>DevTools: the Inspect Element command</h3>
 	<p>If you are focused on a particular element of a web page, such as an image, a heading or other block of text, you can:</p>
