--- a/index.html
+++ b/index.html
@@ -1,1 +1,122 @@
-Hello, world!
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<title>Home Page | Web Design & Development Tutorials | Brendan Munnelly</title>
+
+	<meta name="description" content="Web Design Portfolio Project">
+	<meta property="og:locale" content="en_US" />
+
+	<meta name="author" content="Brendan Munnelly">
+
+	<link rel="stylesheet" href="it4women/assets/css/2n2l-web-design.css">
+
+	<!-- Link to icons for Font Awesome 5 -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+
+	<!-- Styles for Cookie Consent Popup Message  -->
+	<link href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" rel="stylesheet">
+
+<style>
+
+body { background-color: #fafafa }
+.block-content .box-toc { border: solid 1px #d8f5fe; background: #d8f5fe; padding: 12px 20px 3px 20px }
+.block-content .box-toc p a { font-weight: bold }
+
+@media all and (min-width:768px) {
+	.jumbotron { margin-bottom: 48px }
+}
+
+.block-content .box-toc h4 {
+	font-weight: bold;
+	margin: 32px 0 1px 0;
+	font-size: calc(15px + (20 - 15) * ((100vw - 320px)/(1600 - 320));
+	line-height: 1.1;
+}
+</style>
+
+	<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:wght@500&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
+
+
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-N54G36T');</script>
+	<!-- End Google Tag Manager -->
+
+</head>
+
+<body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N54G36T"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+
+
+
+<section class="container-wide">
+
+<img src="women4it.png"  alt="portfolio all the light" style="width: 70%; text-align: center; margin: 0 auto 40px auto">
+
+
+
+
+	<div class="flex-grid" style="align-items: center;">
+
+		<div class="item-3">&nbsp;</div>
+
+		<div class="item-3" style="align-items: center;">
+
+			<a class="btn-solid btn-rounded" style="text-align: center;padding: 12px 28px" href="it4women/index.html">Start here<i class="fas fa-arrow-right"></i></a>
+		</div>
+
+		<div class="item-3">&nbsp;</div>
+
+	</div><!--- /flex-grid -->
+
+</section>
+
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+    <!-- JavaScript for Cookie Consent Popup Message -->
+	<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+	<script>
+	window.cookieconsent.initialise({
+	  	"palette": {
+			"popup": {
+				"background": "#000"
+			},
+			"button": {
+				"background": "#f1d600"
+			}
+		},
+	  	"content": {
+			"href": "https://www.munnelly.com/legal/index.html"
+		}
+	});
+    </script>
+<!-- Begin Inspectlet Asynchronous Code -->
+<script type="text/javascript">
+(function() {
+window.__insp = window.__insp || [];
+__insp.push(['wid', 210045812]);
+var ldinsp = function(){
+if(typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js?wid=210045812&r=' + Math.floor(new Date().getTime()/3600000); var x = document.getElementsByTagName('script')[0]; x.parentNode.
+(insp, x); };
+setTimeout(ldinsp, 0);
+})();
+</script>
+<!-- End Inspectlet Asynchronous Code -->
+</body>
+</html>
+
