Web hosting text

--- a/it4women/exercises/web-hosting-on-github.html
+++ b/it4women/exercises/web-hosting-on-github.html
@@ -110,10 +110,8 @@
 			
 			If another GitHub account has already taken your entered <b>Username</b>, you will see a message similar to that below.
 			<img src="assets/img/github/github-signup-username-taken.png"  alt="GitHub username already taken"></li>
-			<li>When you have entered a <b>Username</b> that GitHub accepts, click the <b>Sign up for GitHub</b> button.
-			<img src="assets/img/github/github-signup-click.png"  alt="GitHub enter username"></li>
 
-			<li>You are now shown a new screen, named <b>Join GitHub</b>. You may be asked to complete an <em>&#8216;I am a real person&#8217;</em> puzzle.
+			<li>You may be asked to complete an <em>&#8216;I am a real person&#8217;</em> puzzle.
 			
 			<img src="assets/img/github/github-create-new-account-1.png"  alt="GitHub image">
 			
