--- a/it4women/index.html
+++ b/it4women/index.html
@@ -35,6 +35,32 @@
 	font-size: calc(15px + (20 - 15) * ((100vw - 320px)/(1600 - 320));
 	line-height: 1.1;
 }
+
+	/* =======INNER FLEXBOX COLUMNS: 3 COLUMNS ON DESKTOPS, 1 COLUMN ON MOBILES ===== */
+
+	.container-flexbox { 
+	   display: flex; 
+	   justify-content: space-between; 
+	   flex-wrap: wrap; 
+	}
+
+	/* Desktops - 3 columns */
+	@media all and (min-width:768px) { 
+		.container-flexbox { width:100%; padding:0 }
+		.container-flexbox .item-3 { width: 30% }
+		.container-flexbox .item-3 img { width: 100%; height: auto }
+		.container-flexbox.sample-pages .item-3 { padding: 12px 0 }
+	}
+
+	/* Mobiles - 1 column */
+	@media all and (max-width:767px) { 
+		.container-flexbox { width:100%; padding:0 }
+		.container-flexbox .item-3 { width: 100% }
+		.container-flexbox .item-3 { margin-bottom: 8% }
+		.container-flexbox .item-3 img { }
+	}
+
+	
 </style>
 
 	<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Mono:wght@500&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -182,6 +208,68 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </section>
 
 
+<section class="container-wide">
+
+
+	<h2>Sample personal websites</h2>
+	<div class="flex-grid">
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://inakisoria.com/">https://inakisoria.com/</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://gerireid.com">https://gerireid.com</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://thierrychopain.com">https://thierrychopain.com</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://marisachentakul.co">https://marisachentakul.co</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://www.britnor.codes">https://www.britnor.codes</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://rebwill.github.io">https://rebwill.github.io</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://nikokoneko.com/">https://nikokoneko.com/</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://samanthaming.com">https://samanthaming.com</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://robbowen.digital">https://robbowen.digital</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://css-irl.info">https://css-irl.info</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="http://luciebajgart.com">https://luciebajgart.com</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://victorkaiwong.com">https://victorkaiwong.com</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://devinford.dev">https://devinford.dev</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://jason.af">https://jason.af</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://pierrickcalvez.com">https://pierrickcalvez.com</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://vanschneider.com">https://vanschneider.com</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://areoladaniel.com">https://areoladaniel.com</a>
+		</div>
+		<div class="item-3" style="padding-bottom:14px">
+			<a target="_blank" href="https://karriebriscoe.com/">https://karriebriscoe.com/</a>
+		</div>
+	</div>
+
+</section>
 
 
 
