Colours images text

--- a/it4women/exercises/colours-and-web-design.html
+++ b/it4women/exercises/colours-and-web-design.html
@@ -617,7 +617,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<br>By Jenni McKinnon at the <a href="https://envato.com/blog/" target="_blank" rel="noopener" style="font-weight:normal">Envato Blog</a></p>
 
 	</div>
-	<p><br><br>Return to <a href="index.html">Contents</a>.</p>
+		<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
+
 
 	<p>&nbsp;</p>
 </section>
