--- a/it4women/exercises/intro-images.html
+++ b/it4women/exercises/intro-images.html
@@ -599,7 +599,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<br>By Eric Karkovack at <a href="https://speckyboy.com/" target="_blank" rel="noopener" style="font-weight:normal">Speckyboy</a></p>
 
 	</div>
-	<p><br><br>Return to <a href="index.html">Contents</a>.</p>
+		<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
+
 
 	<p>&nbsp;</p>
 </section>
