--- a/it4women/exercises/colours-and-web-design.html
+++ b/it4women/exercises/colours-and-web-design.html
@@ -40,7 +40,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <div class="jumbotron tutorial">
-	<h3><a href="index.html" title="All HTML projects">Contents&nbsp;&nbsp;&gt;</a></h3>
+	<h3><a href="../index.html" title="All HTML projects">Contents&nbsp;&nbsp;&gt;</a></h3>
 	<h1>Colours and Web Design</h1>
 </div>
 
