Web browsers text

--- a/it4women/exercises/working-with-web-browsers.html
+++ b/it4women/exercises/working-with-web-browsers.html
@@ -165,7 +165,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<p>As a web developer and designer, the Menu Bar options you will use most frequently will be those available with the <b>Tools | Web Developer</b> command.</p>
 		<img src="assets/img/web-browsers/firefox-customise3.png" class="img-fluid" alt="Tutorial Web Browsers: Firefox Menubar 3">
 
-	
+		<p>For Apple Mac users, see the instructions below:</p>
+
+		<p><a href="https://support.mozilla.org/en-US/kb/restore-menu-bar-firefox" target="-blank">Restore the Menu bar in Firefox</a></p>
+	<p>&nbsp;</p>
 	<h3>Setting Firefox as your default web browser</h3>
 	<p>Follow these steps:</p>
 	
