--- a/it4women/exercises/about-html-files.html
+++ b/it4women/exercises/about-html-files.html
@@ -117,7 +117,7 @@ s
 		
 		By including this line in the &lt;head&gt; of your HTML file, and using media queries in your CSS file(s), you can ensure your web page will be able to shrink or expand according to the width and height of the user&#8217;s screen. This is another self-closing tag.<span class="inside-ol">&nbsp;</span>
 
-		You will learn more about responsive web design (RWD) in these two Tutorials: <a href="responsive-web-design-media-queries.html">Responsive Web Design and Media Queries</a> and <a href="responsive-web-design-fluid-typography.html">Responsive Web Design and Fluid Typography</a>.
+		<!-- You will learn more about responsive web design (RWD) in these two Tutorials: <a href="responsive-web-design-media-queries.html">Responsive Web Design and Media Queries</a> and <a href="responsive-web-design-fluid-typography.html">Responsive Web Design and Fluid Typography</a>. -->
 <pre class="language-html">
    &lt;<span class="blue-dark">meta</span> <span class="blue-light">name</span>=<span class="brown">"viewport"</span>  <span class="blue-light">content</span>=<span class="brown">"width=device-width, initial-scale=1.0"</span>&gt;  
 </pre></li>
@@ -144,7 +144,7 @@ s
 <pre class="language-html">
    &lt;<span class="blue-dark">link</span> <span class="blue-light">rel</span>=<span class="brown">"stylesheet"</span> <span class="blue-light">content</span>=<span class="brown">"mystyle.css"</span>&gt;   
 </pre>
-		Linking a web page to a stylesheet is covered in this Tutorial: <a href="styling-html-with-css.html">Styling HTML with CSS</a>.</li>
+		Linking a web page to a stylesheet is covered in this Tutorial: <a href="styling-css.html">Styling Web Pages with CSS</a>.</li>
 
 		<li><b>Google Analytics snippet</b>: This &#8216;snippet&#8217; (a few lines of code) is usually placed as the last item just before the closing &lt;/head&gt; tag. Note that the code is preceded by a comment, and contains two pairs of opening &lt;script&gt; and closing &lt;/script&gt; tags.
 
@@ -158,7 +158,7 @@ s
        <span class="yellow">gtag</span><span class="white">(</span><span class="brown">'config'</span><span class="white">,</span> <span class="brown">'UA-NNNNNNN-1'</span><span class="white">);</span>
   &lt;/<span class="blue-dark">script</span>&gt;
 </pre>
-		Working with Google Analytics and generating the unique tracking code for your website is covered in this Tutorial: <a href="setting-up-google-analytics.html">Setting Up Google Analytics</a>.</li>
+		Working with Google Analytics and generating the unique tracking code for your website is covered in this Tutorial: <a href="etting-up-google-analytics.html">Setting Up Google Analytics</a>.</li>
 </ul>
 
 	<p><br>Return to <a href="../index.html">Contents</a>.</p>
