Intro Images text

--- a/it4women/exercises/intro-images.html
+++ b/it4women/exercises/intro-images.html
@@ -258,17 +258,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<ol>
 		<li>Download the following compressed file to your computer:
 		<span class="inside-ol">&nbsp;</span>
-		<a href="lesson-3.zip">https://www.munnelly.com/webdesign/exercises/lesson-3.zip</a></li>
+		<a href="lesson-3.zip">https://2n2l.com/it4women/exercises/lesson-images.zip</a></li>
 
 		<li>Copy the ZIP file into your <b>websites</b> folder.</li>
 
 		<li>Uncompress the ZIP file as shown below.
 		<img src="assets/img/intro-images/extract-files.png" alt="Introduction to Images"></li>
-		<li>The files will unzip into a sub-folder of your <b>websites</b> folder named <b>lesson-3</b>.
+		<li>The files will unzip into a sub-folder of your <b>websites</b> folder named <b>lesson-images</b>.
 		<span class="inside-ol">&nbsp;</span>
 		You should see 25 files: four HTML files, four CSS files and a group of image files.
 		<img src="assets/img/intro-images/lesson-3-files.png" alt="Introduction to Images"></li>
-		<li>Copy all these files from the <b>lesson-3</b> sub-folder into your main <b>websites</b> folder.</li>
+		<li>Copy all these files from the <b>lesson-images</b> sub-folder into your main <b>websites</b> folder.</li>
 		<li>In your web browser, such as Google Chrome or Mozilla Firefox Developer Edition, open these four web pages:
 			<span class="inside-ol">&nbsp;</span>
 			<b>page-5.html</b><br>
@@ -557,7 +557,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<ol>
 
 		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
-		<img src="assets/img/intro-google-fonts/github-signin.png" alt="github-signin"></li>
+		<img src="assets/img/intro-images/github-signin.png" alt="github-signin"></li>
 
 		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
 		<span class="inside-ol">&nbsp;</span>
@@ -599,8 +599,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<br>By Eric Karkovack at <a href="https://speckyboy.com/" target="_blank" rel="noopener" style="font-weight:normal">Speckyboy</a></p>
 
 	</div>
-		<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
-
+	<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
 
 	<p>&nbsp;</p>
 </section>
