--- a/it4women/index.html
+++ b/it4women/index.html
@@ -64,9 +64,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<h1>Web Design</h1>
 </div>
 
-<section class="container-wide">
+
+<section class="container-wide" style="padding-top:0; margin-top:-20px">
 
 
+<section class="block-content">
+
+
+	<h2>Google Classroom</h2>
+	<div class="box-toc" style="background-color:#e2f5e2">
+		<p>The Google Classroom for the course is <a href="https://meet.google.com/swk-tdha-err" target="_blank"><b>here</b></a>.</p>
+
+		<p>My email address is <b>munnellyb@gmail.com</b></p>
+	</div>
+
+
+</section>
+</section>
+
+<section class="container-wide" style="margin-top:30px">
 
 
 	<h2>Setting Up</h2>
