--- a/it4women/index.html
+++ b/it4women/index.html
@@ -75,7 +75,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<div class="box-toc" style="background-color:#e2f5e2">
 		<p>The Google Classroom for the course is <a href="https://meet.google.com/swk-tdha-err" target="_blank"><b>here</b></a>.</p>
 
-		<p>My email address is <b>munnellyb@gmail.com</b></p>
+		<p>My email address is <b>munnellyb@gmail.com</b>.</p>
 	</div>
 
 
