Intro images text

--- a/it4women/exercises/intro-images.html
+++ b/it4women/exercises/intro-images.html
@@ -531,10 +531,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Copy-and-paste the following new lines to your web page, directly under the line that contains the link to the <b>page-4.html</b> web page.
 
 <pre class="language-html">
-&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"page-5.html"</span>&gt;<span class="white">Vincent van Gogh</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
-&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"page-6.html"</span>&gt;<span class="white">Irish Tourism</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
-&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"page-7.html"</span>&gt;<span class="white">Smoothies</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
-&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"page-8.html"</span>&gt;<span class="white">Software Analytics</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
+&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-5.html"</span>&gt;<span class="white">Vincent van Gogh</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
+&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-6.html"</span>&gt;<span class="white">Irish Tourism</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
+&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-7.html"</span>&gt;<span class="white">Smoothies</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
+&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-8.html"</span>&gt;<span class="white">Software Analytics</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
 </pre></li>
 
 		<li>The <span class="syn">&lt;body&gt;</span> of your edited home page should now look similar to that below.
@@ -582,10 +582,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<p>Your web pages are now published on GitHub at web addresses similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
 
 	<p><b>https://username.github.io/index.html</b><br>
-	<b>https://username.github.io/page-5.html</b><br>
-	<b>https://username.github.io/page-6.html</b><br>
-	<b>https://username.github.io/page-7.html</b><br>
-	<b>https://username.github.io/page-8.html</b></p>
+	<b>https://username.github.io/websites/page-1.html</b><br>
+	<b>https://username.github.io/websites/page-2.html</b><br>
+	<b>https://username.github.io/websites/page-3.html</b><br>
+	<b>https://username.github.io/websites/page-4.html</b><br>
+	<b>https://username.github.io/websites/page-5.html</b><br>
+	<b>https://username.github.io/websites/page-6.html</b><br>
+	<b>https://username.github.io/websites/page-7.html</b><br>
+	<b>https://username.github.io/websites/page-8.html</b></p>
 
 	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
 
