Styling with CSS text

--- a/it4women/exercises/styling-css.html
+++ b/it4women/exercises/styling-css.html
@@ -580,10 +580,10 @@ But because <i>all</i> the styles on the web page are to have the <i>same</i> <b
 		<b>page-2.html</b><br>
 		<b>page-3.html</b><br>
 		<b>page-4.html</b><br>
-		<b>style-1.html</b><br>
-		<b>style-2.html</b><br>
-		<b>style-3.html</b><br>
-		<b>style-4.html</b></li>
+		<b>style-1.css</b><br>
+		<b>style-2.css</b><br>
+		<b>style-3.css</b><br>
+		<b>style-4.css</b></li>
 		<li>Finally, scroll down to the bottom of the GitHub screen, enter a short message in the <b>Commit changes</b> box click the <b>Commit changes</b> button, and wait for the upload to complete.
 		<img src="assets/img/styling-css/github-upload-progress.png" alt="Project Animation Google Fonts"></li>
 	
