--- a/it4women/exercises/colours-and-web-design.html
+++ b/it4women/exercises/colours-and-web-design.html
@@ -616,12 +616,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<p><a href="https://envato.com/blog/psychology-color-web-design/" target="_blank" rel="noopener" class="further-title">The psychology of colour in web design</a>
 		<br>By Jenni McKinnon at the <a href="https://envato.com/blog/" target="_blank" rel="noopener" style="font-weight:normal">Envato Blog</a></p>
 
+		<p><a href="https://colorhunt.co/" target="_blank" rel="noopener" class="further-title">Color Hunt</a><br>
+		A platform for colour inspiration with user-contributed colour combinations.</p>
 
-		<p><a href="https://colorhunt.co/" target="_blank" rel="noopener" class="further-title">Color Hunt</a></p>
-
-		<p><a href="https://colorpalettes.net/" target="_blank" rel="noopener" class="further-title">Color Palettes</a></p>
-
-		<p><a href="https://colors.muz.li/" target="_blank" rel="noopener" class="further-title">Muzli Colors</a></p>
+		<p><a href="https://colors.muz.li/" target="_blank" rel="noopener" class="further-title">Muzli Colors</a><br>
+		A colour palette/schemes generator.</p>
 
 	</div>
 		<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
