--- a/websites/page-4.html
+++ b/websites/page-4.html
@@ -1,13 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lorem Ipsum Text</title>
     <meta name="description" content="A basic web page containing some placeholder text created with Lorem Ipsum.">
-    <link rel="stylesheet" href="style-4.css">
+    <link rel="stylesheet" href="style-4.css">      
 </head>
 
 <body>
@@ -15,21 +13,20 @@
 <h1>Lorem Ipsum Text</h1>
 
 <h2>Introduction</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores obcaecati dolorem, nulla nihil voluptas tempore ducimus blanditiis enim fugit explicabo corporis facere illo veniam aspernatur molestiae consequuntur unde nobis perspiciatis?</p>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, nemo tenetur? Illum commodi voluptate voluptatibus ab fuga dolorum, totam corporis, quas eaque excepturi et ipsam provident nulla quia optio aperiam!</p>
 
 <h2>Sub-heading</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam atque sint dignissimos sequi illum consectetur laborum numquam id, voluptatem ut beatae illo dolorum fuga, odio quos, necessitatibus adipisci praesentium corporis.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate aliquid, consectetur ea eum quaerat earum voluptatibus similique dicta, iste magnam ratione nihil, sapiente fugit laudantium provident explicabo aperiam labore maiores.</p>
 
 <h2>Sub-heading</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est mollitia ratione id qui, temporibus eos corrupti illum iste voluptates! Iste vitae facere quo harum recusandae! Nulla consequatur deserunt fugiat accusantium.</p>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt est facere veritatis ab nesciunt accusamus harum nam et, reiciendis culpa a, hic impedit placeat quibusdam ea corrupti soluta! Omnis, repellendus!</p>
 
 <h3>Smaller Sub-heading</h3>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil labore fuga, quas aperiam nemo quos. Quas saepe minima eum voluptate velit quod fugit inventore totam? Deserunt dolor accusamus dolores voluptate?</p>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium doloremque asperiores veniam perspiciatis illo at labore praesentium non est totam quae laborum qui quod, illum amet eum facilis optio inventore?</p>
 
 <h2>Sub-heading</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat sunt alias qui laudantium quae tempora commodi distinctio tenetur vel, labore repellat at molestiae fugit numquam nemo eveniet veritatis ipsum reiciendis!</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia eius non magnam vitae est odio ex molestiae corrupti tempore ipsa ipsum deleniti, saepe facere aspernatur expedita excepturi incidunt suscipit totam!</p>
 
 <p><b>Text Source</b>: <i>Lorem Ipsum, a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content</i>.</p>
-
 </body>
 </html>
