--- a/it4women/exercises/intro-images.html
+++ b/it4women/exercises/intro-images.html
@@ -42,8 +42,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 
-
-
 <div class="jumbotron tutorial">
 	<h3><a href="../index.html" title="All HTML projects">Contents&nbsp;&nbsp;&gt;</a></h3>
 	<h1>Introduction to Images</h1>
@@ -116,7 +114,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<p class="toc-indent"><a href="#effect-remove-background">Removing an image background</a></p>
 		<p><a href="#sample-software">Working with the <i>Software</i> sample web page</a></p>
 		<p><a href="#update-home-page-content">Updating the content of your home page</a></p>
-		<p><a href="#upload-github">Uploading your files to GitHub</a></p>
+		<p><a href="#upload-github-home-page">Uploading your home page to GitHub</a></p>
+		<p><a href="#upload-github-sample-files">Uploading your sample files to GitHub</a></p>
+		<p><a href="#upload-github-folder">Uploading a folder to GitHub</a></p>
+		<p><a href="#upload-github-organising">Organising your GitHub account</a></p>
+
 		<p><a href="#further-resources">Further resources</a></p>
 
 	</div>
@@ -531,6 +533,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Copy-and-paste the following new lines to your web page, directly under the line that contains the link to the <b>page-4.html</b> web page.
 
 <pre class="language-html">
+&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-1.html"</span>&gt;<span class="white">A Tale of Two Cities</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
+&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-2.html"</span>&gt;<span class="white">IBAT Chocolates</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
+&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-3.html"</span>&gt;<span class="white">Prince and Purple Rain</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
+&lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-4.html"</span>&gt;<span class="white">Lorem Ipsum</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
 &lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-5.html"</span>&gt;<span class="white">Vincent van Gogh</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
 &lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-6.html"</span>&gt;<span class="white">Irish Tourism</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
 &lt;<span class="blue-dark">p</span>&gt;&lt;<span class="blue-dark">a</span> <span class="blue-light">href</span>=<span class="brown">"websites/page-7.html"</span>&gt;<span class="white">Smoothies</span>&lt;/<span class="blue-dark">a</span>&gt;&lt;/<span class="blue-dark">p</span>&gt; 
@@ -549,10 +555,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </section>
 
-<section id="upload-github" class="wrapper-content bg-white">
-	<h2>Uploading your files to GitHub</h2>
+<section id="upload-github-home-page" class="wrapper-content bg-white">
+	<h2>Uploading your home page to GitHub</h2>
 
-	<p>After finishing your web pages and stylesheets, you are now ready to upload them to your account on GitHub.</p>
+	<p>Follow these steps below to upload your updated &#8216;Home page&#8216; (your <b>index.html file</b>) to your website on GitHub.</p>
 
 	<ol>
 
@@ -572,17 +578,56 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 		<img src="assets/img/intro-images/github-btn-add-file-dropdown.png" alt="Introduction to Images"></li>
 
-		<li>Because you have so many files for these four web pages, it&#8217;s quicker and easier to upload your <i>entire</i> <b>websites</b> folder to your GitHub account by dragging-and-dropping.
+		<li>In File/Windows Explorer, select <i>only</i> the <b>index.html</b> web page and no other file.
 		
-		<img src="assets/img/intro-images/github-upload-drag-drop.png" alt="Introduction to Images"></li>
+		<img src="assets/img/intro-images/github-upload-home-page.png" alt="Introduction to Images"></li>
 
-		<li>Finally, scroll down to the bottom of the GitHub screen, enter a short message in the <b>Commit changes</b> box and click the <b>Commit changes</b> button.</li>
+		<li>Select or drag-and-drop your <b>index.html</b> file to your repository on Github.</li>
+
+		<li>Scroll down to the bottom of the GitHub screen, and accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box.
+
+		<span class="inside-ol">&nbsp;</span>
+
+		Finally, click the green <b>Commit changes</b> button to upload your <b>index.html</b> file.</li>
+
 	</ol>
 
-	<p>Your web pages are now published on GitHub at web addresses similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
+	<p>Your updated Home page is published on GitHub at a web address similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
 
-	<p><b>https://username.github.io/index.html</b><br>
-	<b>https://username.github.io/websites/page-1.html</b><br>
+	<p><b>https://username.github.io/index.html</b></p>
+	<p>Or simply:</p>
+	<p><b>https://username.github.io</b></p>
+
+	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
+</section>
+
+
+<section id="upload-github-sample-files" class="wrapper-content bg-white">
+	<h2>Uploading your sample files to GitHub</h2>
+		
+	<p>Next, you will work with all your other files &#8211; your sample web pages, sample stylesheets and images.</p>
+
+	<p>Because you have so many files for these eight web pages, it&#8217;s quicker and easier to upload your <i>entire</i> <b>websites</b> folder to your GitHub account. Here are the steps.</p>
+	
+	<ol>
+		<li>On your GitHub account, display your <b>username.github.io</b> repository that holds your web pages.
+		
+		<span class="inside-ol">&nbsp;</span>
+
+		Click the <b>Add file</b> button near the right of the screen and choose <b>Upload files</b> from the dropdown list.
+		
+		<img src="assets/img/intro-images/github-btn-add-file-dropdown.png" alt="Introduction to Images"></li>
+
+		<li>In File/Windows Explorer, select your <b>websites</b> folder, and drag-and-drop it to your repository on GitHub.
+		
+		<img src="assets/img/intro-images/github-upload-drag-drop.png" alt="Introduction to Images"></li>
+		
+		<li>To complete the upload, scroll down to the bottom of the GitHub screen, accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box and then click the <b>Commit changes</b> button.</li>
+	</ol>
+
+	<p>That&#8217;s it. Your sample web pages are now published on GitHub at web addresses similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
+
+	<p><b>https://username.github.io/websites/page-1.html</b><br>
 	<b>https://username.github.io/websites/page-2.html</b><br>
 	<b>https://username.github.io/websites/page-3.html</b><br>
 	<b>https://username.github.io/websites/page-4.html</b><br>
@@ -595,12 +640,108 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </section>
 
+<section id="upload-github-folder" class="wrapper-content">
+
+	<h2>Uploading a folder to GitHub</h2>
+	<p>Note that, when you upload a folder to GitHub:</p>
+	
+	<ul>
+		<li><i>Every</i> file in that folder is uploaded.
+		<span class="inside-ol">&nbsp;</span>
+		Uploading a folder is a quick and convenient way of transferring lots of files from your computer to GitHub in one, single operation.</li>
+		
+		<li>If your folder contains any sub-folders, they too will be uploaded, as will the files contained inside the sub-folders.</li>
+		
+		<li>You cannot upload more than 100 files to GitHub in a single operation.
+		<span class="inside-ol">&nbsp;</span>
+		If you try to upload a folder or folders that contain more than 100 files, GitHub will display the following message.
+		
+		<img src="assets/img/intro-images/github-error-100.png" alt="Introduction to Images"></li>
+	</ul>
+
+</section>
+
+<section id="upload-github-organising" class="wrapper-content">
+
+	<h2>Organising your GitHub account</h2>
+	<p>As a last task, you need to organise or &#8216;tidy up&#8217; your folder and files structure on GitHub.</p>
+
+	<p>Follow the steps below.</p>
+
+	<ol>
+		<li>In GitHub, display the contents of your <b>username.github.io</b> repository. It should look like that shown below.
+		<img src="assets/img/intro-images/github-full-list-home-repo.png" alt="Introduction to Images">
+
+		You do not need the four HTML files and four CSS files at the &#8216;top level&#8217;' of your repository on GitHub. These eight files are now stored in the <b>websites</b> folder of your repository.
+
+		<span class="inside-ol">&nbsp;</span>
+		So you can delete these eight files.</li>
+
+		<li>Begin by clicking the <b>page-1.html</b> file to select it.
+		<img src="assets/img/intro-images/github-page-1-select.png" alt="Introduction to Images">
+		GitHub now displays the contents of your <b>page-1.html</b> file.</li>
+
+		<li>Click the <b>Delete</b> icon to remove this file, as shown below.
+		<img src="assets/img/intro-images/github-page-1-delete.png" alt="Introduction to Images"></li>
+		
+		<li>On the next screen displayed, confirm that you want to delete the file from GitHub.
+
+		<img src="assets/img/intro-images/github-page-1-confirm.png" alt="Introduction to Images">
+
+		Accept or edit the short message (<span style="color:gray">Delete Page-1.html</span>) in the <b>Commit changes</b> box and then click the <b>Commit changes</b> button.</li>
+
+		<li>Repeat the above steps to delete the following other files:
+		<span class="inside-ol">&nbsp;</span>
+
+		<b>page-2.html</b><br>
+		<b>page-3.html</b><br>
+		<b>page-4.html</b><br>
+		<b>style-1.css</b><br>
+		<b>style-2.css</b><br>
+		<b>style-3.css</b><br>
+		<b>style-4.css</b>
+
+		<span class="inside-ol">&nbsp;</span>
+
+		When finished deleting these eight files, you will then have only <i>one</i> file (<b>index.html</b>) and <i>one</i> folder (<b>websites</b>) at the &#8216;top-level&#8217; of your repository.
+		
+		<img src="assets/img/intro-images/github-repo-two-files.png" alt="Introduction to Images">
+		
+		Most professional websites will have only one or a few files at their &#8216;top-level&#8217;. 
+		
+		<span class="inside-ol">&nbsp;</span>
+
+		All other website files &#8211; web pages, stylesheets, images, videos or whatever &#8211; will be neatly organised into a logical structure of folders and sub-folders.</li>
+
+		<li>Next, on GitHub, click the <b>websites</b> folder to view the files it contains.</li>
+
+		<li>Click the <b>index.html</b> file in the <b>websites</b> folder, and delete the file.</li>
+
+	</ol>
+
+	<p>You have now finished organising your repository on GitHub.</p>
+
+
+
+</section>
+
 <section id="further-resources" class="wrapper-content">
 
 	<div class="box-toc">
 		<h2>Further resources</h2>
 		<p><a href="https://speckyboy.com/quick-guide-website-photography/" target="_blank" rel="noopener" class="further-title">A quick guide to website photography</a>
 		<br>By Eric Karkovack at <a href="https://speckyboy.com/" target="_blank" rel="noopener" style="font-weight:normal">Speckyboy</a></p>
+
+		<p><a href="https://hiddendepth.ie/blog/importance-choosing-right-imagery/" target="_blank" rel="noopener" class="further-title">Choosing the right website images</a>
+		<br>By Dave Meier at <a href="https://hiddendepth.ie/" target="_blank" rel="noopener" style="font-weight:normal">Hidden Depth</a></p>
+
+		<p><a href="https://automationagency.com/7-tips-choosing-website-images-increase-conversions/" target="_blank" rel="noopener" class="further-title">Seven tips for choosing website images that increase conversions</a>
+		<br>By Carol Taylor at <a href="https://automationagency.com/" target="_blank" rel="noopener" style="font-weight:normal">Automation Agency</a></p>
+
+		<p><a href="https://learn.g2.com/choosing-the-best-images-for-websites" target="_blank" rel="noopener" class="further-title">Seven tips for choosing the best image for your website</a>
+		<br>By Mara Calvello at <a href="https://learn.g2.com/" target="_blank" rel="noopener" style="font-weight:normal">Learning Hub</a></p>
+
+
 
 	</div>
 	<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
