--- a/it4women/exercises/intro-images.html
+++ b/it4women/exercises/intro-images.html
@@ -169,16 +169,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li><a href="https://www.unsplash.com" target="_blank" rel="noopener">Unsplash</a></li>
 		<li><a href="https://www.freeimages.com" target="_blank" rel="noopener">FreeImages</a></li>
 		<li><a href="https://www.stockvault.net" target="_blank" rel="noopener">StockVault</a></li>
+		<li><a href="https://picjumbo.com/" target="_blank" rel="noopener">Picjumbo</a></li>
+		<li><a href="https://publicdomainarchive.com/" target="_blank" rel="noopener">Public Domain Archive</a></li>
 	</ul>
 
 	<p>Here are some online libraries that offer less generic and more stylised photography:</p>
 
 	<ul>
+		<li><a href="https://littlevisuals.co/" target="_blank" rel="noopener">Little Visuals</a></li>
+		<li><a href="https://gratisography.com/" target="_blank" rel="noopener">Gratisography</a></li>
+		<li><a href="https://getrefe.tumblr.com/" target="_blank" rel="noopener">Getrefe</a></li>
 		<li><a href="https://www.lifeofpix.com/" target="_blank" rel="noopener">Life of Pix</a></li>
 		<li><a href="https://freerangestock.com/" target="_blank" rel="noopener">Freerange</a></li>
 		<li><a href="https://kaboompics.com/" target="_blank" rel="noopener">KaboomPics</a></li>
 		<li><a href="https://gratisography.com/" target="_blank" rel="noopener">Gratisography</a></li>
 		<li><a href="https://picography.co/" target="_blank" rel="noopener">Picography</a></li>
+		<li><a href="https://nos.twnsnd.co/" target="_blank" rel="noopener">New Old Stock</a></li>
 	</ul>
 
 	<p>For online business-themed images, check out this free gallery from e-commerce giant Shopify:</p>
