Intro to Images text

--- a/it4women/exercises/intro-images.html
+++ b/it4women/exercises/intro-images.html
@@ -57,6 +57,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li>Insert images in a web page and add set a CSS margin-bottom value beneath them.</li>
 		<li>Include alternative text for inserted images.</li>
 		<li>Add drop shadow and rounded corner effects to inserted images.</li>
+		<li>Organise your website on GitHub into a logical structure of files and folders.</li>
+
 	</ul>
 
 	<p>You can view finished versions of the four sample web pages you will create in this Tutorial by clicking the links below. The finished samples will each open in a new tab of your web browser.</p>
@@ -80,7 +82,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 	</div>
 
-	<p>You will also update your website home web page with hyperlinks to your four new sample web pages.</p>
+	<p>You will also update your website home web page to include hyperlinks to your four new sample web pages.</p>
 	<!--
 	<div class="four-samples">
 		<div>
