Intro to Images text

--- a/it4women/exercises/intro-images.html
+++ b/it4women/exercises/intro-images.html
@@ -269,7 +269,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<ol>
 		<li>Download the following compressed file to your computer:
 		<span class="inside-ol">&nbsp;</span>
-		<a href="lesson-3.zip">https://2n2l.com/it4women/exercises/lesson-images.zip</a></li>
+		<a href="https://2n2l.com/it4women/exercises/lesson-images.zip">https://2n2l.com/it4women/exercises/lesson-images.zip</a></li>
 
 		<li>Copy the ZIP file into your <b>websites</b> folder.</li>
 
@@ -288,6 +288,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<b>page-8.html</b></li>
 	</ol>
 	<p>You are now ready to work with the sample files you have downloaded.</p>
+
+	<p>As a final step, delete the following two items from your <b>websites</b> folder:</p>
+
+	<ol>
+		<li><b>lesson-images.zip</b>: This is the compressed file you downloaded. You no longer need this file and can remove it.</li>
+		<li><b>lesson-images</b>:  This is the sub-folder within your <b>websites</b> folder that was created when you unzipped the compressed file. You no longer need this sub-folder and can remove it.</li>
+	</ol>
 
 
 </section>
@@ -460,7 +467,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<ol>
 		<li>Open a new tab in your web browser and go to this web address:
 		<span class="inside-ol">&nbsp;</span>
-		<a href="https://remove.bg" target="_blank" style="font-weight:bold">remove.bg</a></li>
+		<a href="https://remove.bg" target="_blank" style="font-weight:bold">https://remove.bg</a></li>
 
 		<li>Click the <b>Upload image</b> button, and upload your <b>lemons.png</b> image file.
 		
