--- a/it4women/exercises/intro-google-fonts.html
+++ b/it4women/exercises/intro-google-fonts.html
@@ -124,7 +124,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section id="fonts-steps" class="wrapper-content bg-white">
 	<h2>Google Fonts: the two steps</h2>
 
-	<p>There are <i>two</i> basic steps to using Google Fonts. THey are as follows.</p>
+	<p>There are <i>two</i> basic steps to using Google Fonts. They are as follows.</p>
 
 
 	<h3 id="fonts-1">One: Making the Google Font available to your web page</h3>
@@ -332,7 +332,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 		<img src="assets/img/intro-google-fonts/github-repo-select.png" alt="github-signin"></li>
 
-		<li>On the next GitHub screen displayed, near the right of the screen, you can see a button named <b>Add file</b>. Click on it.
+		<li>On the next GitHub screen displayed, click the <b>websites</b> folder. This is where you sample web pages, stylesheets and images are contained.
+
+		<img src="assets/img/intro-google-fonts/github-full-list-home.png" alt="github-signin"></li>
+
+
+		<li>On the next GitHub screen, click the <b>Add file</b> button.
 		<img src="assets/img/intro-google-fonts/github-btn-add-file.png" alt="github-upload-portfolio"></li>
 
 		<li>From the dropdown list displayed, choose the option <b>Upload files</b>.
@@ -355,10 +360,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>Your web pages and stylesheets are now published on GitHub at web addresses similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
 
-	<p><b>https://username.github.io/page-5.html</b><br>
-	<b>https://username.github.io/page-6.html</b><br>
-	<b>https://username.github.io/page-7.html</b><br>
-	<b>https://username.github.io/page-8.html</b></p>
+	<p><b>https://username.github.io/websites/page-5.html</b><br>
+	<b>https://username.github.io/websites/page-6.html</b><br>
+	<b>https://username.github.io/websites/page-7.html</b><br>
+	<b>https://username.github.io/websites/page-8.html</b></p>
 
 	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
 
