Intro to Images text

--- a/it4women/exercises/intro-images.html
+++ b/it4women/exercises/intro-images.html
@@ -188,6 +188,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<li><a href="https://gratisography.com/" target="_blank" rel="noopener">Gratisography</a></li>
 		<li><a href="https://picography.co/" target="_blank" rel="noopener">Picography</a></li>
 		<li><a href="https://nos.twnsnd.co/" target="_blank" rel="noopener">New Old Stock</a></li>
+		<li><a href="https://css-tricks.com/unconventional-stock-image-sources/" target="_blank" rel="noopener">Unconventional Stock Image Sources</a></li>
 	</ul>
 
 	<p>For online business-themed images, check out this free gallery from e-commerce giant Shopify:</p>
