--- a/it4women/exercises/intro-box-model.html
+++ b/it4women/exercises/intro-box-model.html
@@ -108,7 +108,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>The above AIB home page contains <b>364</b> div elements.</p>
 	
-	<p>Each of these grouping div elements and the smaller elements they contain follow the rules of the &#8216;box model&#8217;.</p>
+	<p>Each of these grouping div elements and the smaller elements they contain follows the rules of the &#8216;box model&#8217;.</p>
 
 </section>
 
@@ -119,7 +119,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<ol>
 		<li>Download the following compressed file to your computer:
 		<span class="inside-ol">&nbsp;</span>
-		<a href="lesson-4.zip">https://www.munnelly.com/webdesign/exercises/lesson-4.zip</a></li>
+		<a href="lesson-4.zip">https://www.2n2l.com/it4women/exercises/lesson-4.zip</a></li>
 
 		<li>Copy the ZIP file into your <b>websites</b> folder.</li>
 
@@ -145,7 +145,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<p>Display the <b>sandbox-divs.html</b> web page in your Chrome or Mozilla Firefox Developer Edition browser. It should look as shown below.</p>
 
-		<img src="assets/img/intro-box-model/div-pre-web-page.png" alt="Introduction to the Box Model">
+	<img src="assets/img/intro-box-model/div-pre-web-page.png" alt="Introduction to the Box Model">
+	
+	<p>You can now delete the following two items from your <b>websites</b> folder:</p>
+
+	<ol>
+		<li><b>lesson-4.zip</b>: This is the compressed file you downloaded. You no longer need this file and can remove it.</li>
+		<li><b>lesson-4</b>:  This is the sub-folder within your <b>websites</b> folder that was created when you unzipped the compressed file. You no longer need this sub-folder and can remove it.</li>
+	</ol>
+
+
 
 </section>
 
@@ -158,7 +167,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<b>sandbox-divs.html</b><br>
 		<b>sandbox-divs.css</b></li>
 
-		<li>In the web page file, you can HTML tags for three elements: a main heading, a sub-headng and paragraph text.
+		<li>In the web page file, you can HTML tags for three elements: a main heading, a sub-heading and paragraph text.
 		<img src="assets/img/intro-box-model/div-1.png" alt="Introduction to the Box Model"></li>
 
 		<li>In the stylesheet file, you can see <i>selectors</i> and <i>declaration blocks</i> for elements from the web page. Below is the first of these three.
@@ -644,17 +653,46 @@ At the bottom of the stylesheet file, copy-and-paste the following.
 <section id="box-upload" class="wrapper-content">
 	<h2>Uploading your files to GitHub</h2>
 
-	<p>Upload the following web page and stylesheet to your account on GitHub:</p>
 
-	<p><b>divs-sandbox.html</b><br>
-	<b>divs-sandbox.css</b></p>
+	<ol>
 
-	<p>Your web page will be published at web addresses similar to the following:</p>
+		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
+		<img src="assets/img/intro-google-fonts/github-signin.png" alt="github-signin"></li>
 
-	<p><b>https://username.github.io/divs-sandbox.html</b></p>
+		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
+		<span class="inside-ol">&nbsp;</span>
+		<b>username.github.io</b>
 
+		<img src="assets/img/intro-google-fonts/github-repo-select.png" alt="github-signin"></li>
+
+		<li>On the next GitHub screen displayed, click the <b>websites</b> folder. This is where you sample web pages, stylesheets and images are contained.
+
+		<img src="assets/img/intro-google-fonts/github-full-list-home.png" alt="github-signin"></li>
+
+
+		<li>On the next GitHub screen, click the <b>Add file</b> button.
+		<img src="assets/img/intro-google-fonts/github-btn-add-file.png" alt="github-upload-portfolio"></li>
+
+		<li>From the dropdown list displayed, choose the option <b>Upload files</b>.
+
+		<img src="assets/img/intro-google-fonts/github-btn-add-file-dropdown.png" alt="Introduction to Google Fonts"></li>
+
+		<li>Select or drag-and-drop the following web page and stylesheet to upload them to your GitHub account:
+			<span class="inside-ol">&nbsp;</span>
+			<b>divs-sandbox.html</b><br>
+			<b>divs-sandbox.css</b></li>
+
+		<li>Finally, scroll down to the bottom of the GitHub screen, accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box and click the <b>Commit changes</b> button.</li>
+	</ol>
+
+	<p>Your web page is now published on GitHub at a web address similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
+
+	<p><b>https://username.github.io/websites/divs-sandbox.html</b>
 	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
+
 </section>
+
+
 
 
 <section id="further-resources" class="wrapper-content">
