--- a/it4women/exercises/intro-google-fonts.html
+++ b/it4women/exercises/intro-google-fonts.html
@@ -355,7 +355,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<b>style-7.css</b><br>
 			<b>style-8.css</b></li>
 
-		<li>Finally, scroll down to the bottom of the GitHub screen, enter a short message in the <b>Commit changes</b> box and click the <b>Commit changes</b> button.</li>
+		<li>Finally, scroll down to the bottom of the GitHub screen, accept or edit the short message (<span style="color:gray">Add files via upload</span>) in the <b>Commit changes</b> box and click the <b>Commit changes</b> button.</li>
 	</ol>
 
 	<p>Your web pages and stylesheets are now published on GitHub at web addresses similar to the following, where <b>username</b> is the username you have chosen for your GitHub account:</p>
