--- a/it4women/exercises/intro-google-fonts.html
+++ b/it4women/exercises/intro-google-fonts.html
@@ -344,7 +344,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 		<img src="assets/img/intro-google-fonts/github-btn-add-file-dropdown.png" alt="Introduction to Google Fonts"></li>
 
-		<li>Select or drag-and-drop the following files to upload them to your GitHub account:
+		<li>Select or drag-and-drop the following web pages and stylesheets to upload them to the <b>websites</b> folder of your GitHub account::
 			<span class="inside-ol">&nbsp;</span>
 			<b>page-5.html</b><br>
 			<b>page-6.html</b><br>
