--- a/it4women/exercises/intro-box-model.html
+++ b/it4women/exercises/intro-box-model.html
@@ -663,7 +663,7 @@ At the bottom of the stylesheet file, copy-and-paste the following.
 
 		<img src="assets/img/intro-google-fonts/github-repo-select.png" alt="github-signin"></li>
 
-		<li>On the next GitHub screen displayed, click the <b>websites</b> folder. This is where you sample web pages, stylesheets and images are contained.
+		<li>On the next GitHub screen displayed, click the <b>websites</b> folder. This is where your sample web pages, stylesheets and images are contained.
 
 		<img src="assets/img/intro-google-fonts/github-full-list-home.png" alt="github-signin"></li>
 
