--- a/it4women/exercises/working-with-sections.html
+++ b/it4women/exercises/working-with-sections.html
@@ -768,7 +768,7 @@ You do not need to change the class name or the <b>background-color</b> value of
 
 		<img src="assets/img/intro-google-fonts/github-full-list-home.png" alt="github-signin"></li>
 
-		<li>To your <b>websites</b> folder, upload the following web pages and stylesheets:
+		<li>To your <b>websites</b> folder, upload the following web pages, stylesheets and image file:
 		<span class="inside-ol">&nbsp;</span>
 		<b>page-10.html</b><br>
 		<b>page-11.html</b><br>
