--- a/it4women/exercises/intro-media-queries.html
+++ b/it4women/exercises/intro-media-queries.html
@@ -303,6 +303,47 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section id="github-upload" class="wrapper-content">
 	<h2>Uploading your CSS files to GitHub</h2>
 
+	<p>After you have finished working with your stylesheets, you are ready to upload them to your account on GitHub.</p>
+
+	<ol>
+
+		<li>Open a new tab in your web browser and go to <a href="https://www.github.com" target="_blank">GitHub.com</a>. If you are not already signed in to your GitHub account, sign in now.
+		<img src="assets/img/intro-google-fonts/github-signin.png" alt="github-signin"></li>
+
+		<li>On your GitHub home page, click the name of the repository (&#8216;repo&#8217;) that holds your web pages. Its name will look as follows, where <b>username</b> is your chosen username on GitHub.
+		<span class="inside-ol">&nbsp;</span>
+		<b>username.github.io</b>
+
+		<img src="assets/img/intro-google-fonts/github-repo-select.png" alt="github-signin"></li>
+
+		<li>On your GitHub account, display your <b>websites</b> folder. This is where your sample web pages, stylesheets and images are contained.
+
+		<img src="assets/img/intro-google-fonts/github-full-list-home.png" alt="github-signin"></li>
+
+		<li>To your <b>websites</b> folder, upload the following three stylesheet files:
+		<span class="inside-ol">&nbsp;</span>
+		<b>style-10.css</b><br>
+		<b>style-11.css</b><br>
+		<b>style-12.css</b></li>
+	</ol>
+
+	<p>Your linked web pages will be published at web addresses similar to the following:</p>
+
+	<p><b>https://username.github.io/websites/page-10.html</b><br>
+	<b>https://username.github.io/websites/page-11.html</b><br>
+	<b>https://username.github.io/websites/page-12.html</b></p>
+
+	<p>It may take a few minutes for your uploaded files to appear on GitHub.</p>
+	<p><br><br>Return to <a href="../index.html">Contents</a>.</p>
+
+	<p>&nbsp;</p>
+</section>
+
+
+
+<section id="github-upload" class="wrapper-content">
+	<h2>Uploading your CSS files to GitHub</h2>
+
 	<p>Upload the following three stylesheet files to your account on GitHub:</p>
 
 	<p><b>style-10.css</b><br>
